--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209003/FlowAskDetail.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209003/FlowAskDetail.html
@@ -1,10 +1,179 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="stylesheet" href="../../../../Content/mui.min.css" />
+    <link rel="stylesheet" href="../../../../Content/mui.picker.min.css" />
+    <link rel="stylesheet" href="../../../../Content/mui.poppicker.css" />
+    <link rel="stylesheet" href="../../../../Content/upload.css" />
+    <link rel="stylesheet" href="../../../../Content/ApprovalUtils.css" />
+    <link rel="stylesheet" href="../../../../Content/DoneOrMyApproval.css" />
     <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
+    <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
+        <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
+            <div class="mui-input-row">
+                <label>销售人员<i style="color:red;">*</i></label>
+                <textarea rows="2" id="fxsry" readonly></textarea>
+                <input type="hidden" id="fno" readonly />
+            </div>
+            <div class="mui-input-row">
+                <label>销售区域<i style="color:red;">*</i></label>
+                <textarea rows="2" id="fxsqy" readonly></textarea>
+            </div>
+            <div class="mui-input-row">
+                <label>月<i style="color:red;">*</i></label>
+                <textarea rows="2" id="fy" readonly placeholder="请选择"></textarea>
+            </div>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>任务完成情况(单位:万元)</label>
+            </div>
+            <div class="mui-col-xs-12" style="text-align:center;">
+                <label style="font-size:0.8rem;">销售额（含税）<i style="color:red;">*</i></label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>当月任务</label>
+                    <input type="number" id="fdyrw_xse" readonly />
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>当月完成</label>
+                    <input type="number" id="fdywc_xse" readonly />
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>完成率</label>
+                    <input type="text" id="fwcl_xse" readonly />
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>累计任务(01-x月)</label>
+                    <input type="number" id="fljrw_xse" readonly />
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>累计完成(01-x月)</label>
+                    <input type="number" id="fljwc_xse" readonly />
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>累计完成率</label>
+                    <input type="text" id="fljwcl_xse" readonly />
+                </div>
+            </div>
+            <div class="mui-col-xs-12" style="text-align:center;">
+                <label style="font-size:0.8rem;">回款额<i style="color:red;">*</i></label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>当月任务</label>
+                    <input type="number" id="fdyrw_hke" readonly />
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>当月完成</label>
+                    <input type="number" id="fdywc_hke" readonly />
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>完成率</label>
+                    <input type="text" id="fwcl_hke" readonly />
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>累计任务(01-x月)</label>
+                    <input type="number" id="fljrw_hke" readonly />
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>累计完成(01-x月)</label>
+                    <input type="number" id="fljwc_hke" readonly />
+                </div>
+                <div class="mui-col-xs-4" style="display:flex;">
+                    <label>累计完成率</label>
+                    <input type="text" id="fljwcl_hke" readonly />
+                </div>
+            </div>
+            <div class="mui-col-xs-12" style="text-align:center;">
+                <label style="font-size:0.8rem;">销售发出金额<i style="color:red;">*</i></label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>当月完成</label>
+                    <input type="number" id="fdywc_fc" readonly />
+                </div>
+                <div class="mui-col-xs-6" style="display:flex;">
+                    <label>累计完成(01-x月)</label>
+                    <input type="number" id="fljwc_fc" readonly />
+                </div>
+            </div>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>原因分析</label>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <label>销售额任务未完成原因分析<i style="color:red;">*</i></label>
+                    <textarea rows="4" id="fyyfx1" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <label>回款任务未完成原因分析<i style="color:red;">*</i></label>
+                    <textarea rows="4" id="fyyfx2" readonly></textarea>
+                </div>
+            </div>
+            <div class="mui-row cutOffLine" style="padding:3vw;">
+                <div class="mui-col-xs-12" style="display:flex;">
+                    <label>备注<i style="color:red;">*</i></label>
+                    <textarea rows="4" id="fbz" readonly></textarea>
+                </div>
+            </div>
+        </form>
 
+        <div class="mui-table-view" style="margin-bottom:1rem;">
+            <div class="mui-table-view-cell  mui-collapse mui-active">
+                <a class="mui-navigate-right" href="#" style="background-color:#00a0ea;color:white;font-size:0.75rem;">
+                    历史签核意见
+                </a>
+                <div class="mui-collapse-content">
+                    <!--流程列表-->
+                    <div class="list">
+                        <ul id="signff"></ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <input value="" id="stepId" name="stepId" type="hidden" />
+    <input type="hidden" id="flowPerId" name="flowPerId" value="" />
+    <input type="hidden" id="processName" name="processName" value="" />
+    <input type="hidden" id="noticePer" name="noticePer" value="" />
+    <input type="hidden" id="taskId" name="taskId" value="" />
+
+
+    <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
+    <!--<script src="http://yun.kingdee.com/res/js/qingjs.js"></script>-->
+    <script type="text/javascript" src="http://wb.weigaoholding.com:8090/res/js/qingjs.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.poppicker.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.picker.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/ApprovalUtils.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/util.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/common.js"></script>
+    <script type="text/javascript" src="common.js"></script>
+    <script>
+
+         mui.init();
+
+         mui.ready(function () {
+             _init._preAskOrDone();
+
+         });
+    </script>
 </body>
 </html>
