--- a/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209005/FlowCreate.html
+++ b/BPMMobile/Pages/02YiYongZhiPin/09JieLiKang/SC0209005/FlowCreate.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="mui-col-xs-4" style="display:flex;">
                     <label>客户编码<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="fkhbm" placeholder="请填写"></textarea>
+                    <textarea rows="2" id="fkhbm" readonly></textarea>
                 </div>
                 <div class="mui-col-xs-4" style="display:flex;">
                     <label>客户分类<i style="color:red;">*</i></label>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="mui-col-xs-4" style="display:flex;">
                     <label>法人代表<i style="color:red;">*</i></label>
-                    <textarea rows="2" id="ffrdb" placeholder="请填写"></textarea>
+                    <textarea rows="2" id="ffrdb" readonly></textarea>
                 </div>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
@@ -73,7 +73,7 @@
                 </div>
                 <div class="mui-col-xs-4" style="display:flex;">
                     <label>床位数<i style="color:red;">*</i></label>
-                    <input type="number" id="fcws" placeholder="请填写" />
+                    <input type="number" id="fcws" readonly />
                 </div>
             </div>
             <div class="mui-row cutOffLine" style="padding:3vw;">
@@ -117,6 +117,10 @@
                     <label>销售员编码<i style="color:red;">*</i></label>
                     <textarea rows="2" id="fxsybm" readonly></textarea>
                 </div>
+                <div class="mui-col-xs-8" style="display:flex;">
+                    <label>销售员名称<i style="color:red;">*</i></label>
+                    <textarea rows="2" id="fxsymc" readonly></textarea>
+                </div>
             </div>
             <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
                 <label>财务资料</label>
@@ -129,13 +133,37 @@
                 <div class="mui-col-xs-8" style="display:flex;">
                     <label>财务组织名称</label>
                     <textarea rows="2" id="fzzmc" readonly></textarea>
-                </div>              
+                </div>
             </div>
         </div>
         <div class="mui-btn-row" id="SaveD">
             <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
         </div>
     </div>
+
+
+    <div id="selector" style="display:none;">
+        <header class="mui-bar mui-bar-nav">
+            <a class="mui-icon mui-icon-left-nav mui-pull-left"></a>
+            <h1 class="mui-title">选择列表</h1>
+            <a id='done' class="mui-btn mui-btn-link mui-pull-right mui-btn-blue mui-disabled">完成</a>
+        </header>
+        <div class="mui-indexed-list" id="list" style="top:2rem;">
+
+            <div class="mui-indexed-list-search mui-input-row mui-search">
+                <input type="search" class="mui-input-clear mui-indexed-list-search-input" placeholder="搜索">
+            </div>
+            <div class="mui-indexed-list-bar" style="display:none;">
+
+            </div>
+            <div class="mui-indexed-list-alert"></div>
+            <div class="mui-indexed-list-inner">
+                <div class="mui-indexed-list-empty-alert">没有数据</div>
+                <ul class="mui-table-view" id="datalist"></ul>
+            </div>
+        </div>
+    </div>
+
     <!--<script type="text/javascript" src="../../../../Scripts/vconsole.min.js"></script>-->
     <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
     <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
