更新选择城市插件

--- a/BPMMobile/Pages/00KCY/BG001605/FlowCreate.html
+++ b/BPMMobile/Pages/00KCY/BG001605/FlowCreate.html
@@ -38,14 +38,28 @@
                 <label>是否住宿<i style="color:red;">*</i></label>
                 <input type="text" id="fif_zs" readonly value="否" />
             </div>
-            <div class="mui-input-row">
-                <label>工作地址<i style="color:red;">*</i></label>
-                <input type="text" id="fgzdz" readonly placeholder="请选项" />
+            <div>
+                <div class="mui-input-row">
+                    <label>工作地址<i style="color:red;">*</i></label>
+                    <input type="text" id="fgzdz" class="ff" readonly placeholder="请选项" />
+                </div>
+                <div class="mui-input-row">
+                    <label>住宿地点<i style="color:red;">*</i></label>
+                    <input type="text" id="fzsdd" class="ff" placeholder="请选择" />
+                </div>
             </div>
-            <div class="mui-input-row">
-                <label>住宿地点<i style="color:red;">*</i></label>
-                <input type="text" id="fzsdd" placeholder="请选择" />
+            <div>
+                <div class="mui-input-row">
+                    <label>工作地址<i style="color:red;">*</i></label>
+                    <input type="text" id="fgzdz" class="ff" readonly placeholder="请选项" />
+                </div>
+                <div class="mui-input-row">
+                    <label>住宿地点<i style="color:red;">*</i></label>
+                    <input type="text" id="fzsdd" class="ff" placeholder="请选择" />
+                </div>
             </div>
+
+           
             <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
                 <label>工作牌申请明细表</label>
             </div>
@@ -74,7 +88,7 @@
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js?123"></script>
     <script type="text/javascript" src="../../../../Scripts/common.js"></script>
     <script type="text/javascript" src="common.js"></script>
-    <script type="text/javascript" src="../../../Scripts/location.js"></script>
+    <script type="text/javascript" src="../../../Scripts/location.js?1234"></script>
     <script>
 
         var vconsole = new VConsole();
