--- a/BPMMobile/Pages/00KCY/BG001608/FlowCreate.html
+++ b/BPMMobile/Pages/00KCY/BG001608/FlowCreate.html
@@ -1,10 +1,91 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+    <link rel="stylesheet" href="../../../../Content/mui.min.css" />
+    <link rel="stylesheet" href="../../../../Content/mui.picker.min.css" />
+    <link rel="stylesheet" href="../../../../Content/mui.poppicker.css" />
+    <link rel="stylesheet" href="../../../../Content/mui.indexedlist.css" />
+    <link rel="stylesheet" href="../../../../Content/upload.css" />
+    <link rel="stylesheet" href="../../../../Content/ApprovalUtils.css" />
     <title></title>
+    <meta charset="utf-8" />
 </head>
 <body>
+    <div class="mui-content" style="background-color:white;z-index:2;" id="wrapper">
+        <form class="mui-input-group" style="left:0rem;right:0rem;margin-bottom:1rem;padding-bottom:4rem;">
+            <div class="mui-input-row">
+                <label>提报人</label>
+                <input type="text" id="fname" readonly />
+            </div>
+            <div class="mui-input-row">
+                <label>提报时间</label>
+                <input type="date" id="fdate" readonly />
+            </div>
+            <div class="mui-input-row">
+                <label>所属公司</label>
+                <input type="text" id="fgs" readonly />
+            </div>
+            <div class="mui-input-row">
+                <label>联系电话<i style="color:red;">*</i></label>
+                <input type="tel" id="ftel" placeholder="请填写" />
+            </div>
+            <div class="mui-input-row">
+                <label>申请类型<i style="color:red;">*</i></label>
+                <input type="text" id="flx" readonly placeholder="请选择" />
+            </div>
+            <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                <label>车辆通行证申请明细表</label>
+            </div>
+            <div id="mxlist">
 
+            </div>
+            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;">
+                添加车辆通行证申请明细表
+                <span class="mui-icon mui-icon-plusempty"></span>
+            </a>
+        </form>
+        <div class="mui-btn-row" id="SaveD">
+            <button class="mui-btn mui-btn-primary" type="button" id="commitbt" onclick="Save()">提交</button>
+        </div>
+    </div>
+
+
+
+    <!--<script type="text/javascript" src="../../../Scripts/vconsole.min.js"></script>-->
+    <script type="text/javascript" src="../../../../Scripts/baidu-statistics.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/zepto.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.js"></script>
+    <script type="text/javascript" src="http://wb.weigaoholding.com:8090/res/js/qingjs.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.poppicker.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.picker.min.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/mui.indexedlist.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/ApprovalUtils.js"></script>
+    <!--<script type="text/javascript" src="../../../../Scripts/util.js"></script>-->
+    <script type="text/javascript" src="../../../../Scripts/uploadOpt.js"></script>
+    <script type="text/javascript" src="../../../../Scripts/upload.detail.js?123"></script>
+    <script type="text/javascript" src="../../../../Scripts/common.js"></script>
+    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="../../../Scripts/location.js"></script>
+    <script>
+
+        //var vconsole = new VConsole();
+
+        mui.init();
+        mui.ready(function () {
+
+            getVersion('\\00跨产业集团\\16_行政办公', '集团公司员工车辆通行证申请');
+            getBPMParam();
+            _init._preCreate();
+            uploadOpt();
+
+        });
+
+
+    </script>
 </body>
 </html>
