--- a/BPMMobile/Pages/09YiLiaoShangYe/03YiXueJianYan/SCYX0903003/FlowCreate.html
+++ b/BPMMobile/Pages/09YiLiaoShangYe/03YiXueJianYan/SCYX0903003/FlowCreate.html
@@ -95,14 +95,18 @@
                         </div>
                     </div>
                     <div class="mui-row cutOffLine" style="padding:3vw;">
-                        <div class="mui-col-xs-6" style="display:flex;">
+                        <div class="mui-col-xs-4" style="display:flex;">
                             <label>时空产品代码</label>
                             <textarea id="fskcpdm" placeholder="请填写" rows="2"></textarea>
                         </div>
-                        <div class="mui-col-xs-6" style="display:flex;">
+                        <div class="mui-col-xs-4" style="display:flex;">
                             <label>品名<i style="color:red;">*</i></label>
                             <textarea id="fpm" placeholder="请填写" rows="2"></textarea>
                         </div>
+                        <div class="mui-col-xs-4" style="display:flex;">
+                            <label>单位<i style="color:red;">*</i></label>
+                            <textarea id="fdw" placeholder="请填写" rows="2"></textarea>
+                        </div> 
                     </div>
                     <div class="mui-row cutOffLine" style="padding:3vw;">
                         <div class="mui-col-xs-4" style="display:flex;">
@@ -164,7 +168,7 @@
     <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
     <script type="text/javascript" src="../../../../Scripts/common.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="common.js?1"></script>
     <script>
 
         //var vconsole = new VConsole();
