--- a/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302003/FlowCreate.html
+++ b/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302003/FlowCreate.html
@@ -253,7 +253,7 @@
                 <label>国内出差明细</label>
             </div>
             <div id="mxlist_gn">
-                <div id="mx">
+                <div id="mx" class="divblock">
                     <div class="mui-input-row itemtitle">
                         <label>明细列表项</label>
                         <span class="mui-icon mui-icon-close mui-pull-right" style="margin-right:0.6rem;border-width:0.1rem;border-radius:1.2rem;margin-top:0.2rem;" id="deleteProduct" onclick="deleteItem(this)"></span>
@@ -313,7 +313,7 @@
                 <label>国外出差明细</label>
             </div>
             <div id="mxlist_gw">
-                <div id="mx">
+                <div id="mx" class="divblock">
                     <div class="mui-input-row itemtitle">
                         <label>明细列表项</label>
                         <span class="mui-icon mui-icon-close mui-pull-right" style="margin-right:0.6rem;border-width:0.1rem;border-radius:1.2rem;margin-top:0.2rem;" id="deleteProduct" onclick="deleteItem(this)"></span>
