--- a/BPMMobile/Pages/09YiLiaoShangYe/03YiXueJianYan/SCYX0903003/FlowUndoDetail.html
+++ b/BPMMobile/Pages/09YiLiaoShangYe/03YiXueJianYan/SCYX0903003/FlowUndoDetail.html
@@ -210,7 +210,7 @@
     <script type="text/javascript" src="../../../../Scripts/upload.js"></script>
     <script type="text/javascript" src="../../../../Scripts/upload.detail.js"></script>
     <script type="text/javascript" src="../../../../Scripts/common.js"></script>
-    <script type="text/javascript" src="common.js"></script>
+    <script type="text/javascript" src="common.js?1"></script>
     <script>
 
         //console.log(navigator.userAgent);
