--- a/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302007/FlowUndoDetail.html
+++ b/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302007/FlowUndoDetail.html
@@ -73,7 +73,7 @@
             </div>
             <div id="mxlist">
             </div>
-            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;">
+            <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;display:none;">
                 添加车辆费用申请
                 <span class="mui-icon mui-icon-plusempty"></span>
             </a>
