--- a/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302008/FlowCreate.html
+++ b/BPMMobile/Pages/99YeWuPingTai/03JiTuanFeiYong/FYSQ990302008/FlowCreate.html
@@ -66,19 +66,19 @@
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
                     <label>是否借款</label>
-                    <textarea rows="2" id="shifoujk" readonly placeholder="请选择"></textarea>
+                    <textarea rows="2" id="shifoujk" readonly placeholder="请选择">否</textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
                     <label>总申请金额</label>
                     <input type="hidden" id="if_bx" readonly />
-                    <textarea rows="2" id="amt_zmx" readonly></textarea>
+                    <textarea rows="2" id="amt_zmx" readonly>0</textarea>
                 </div>
                 <div class="mui-col-xs-3" style="display:flex;">
                     <label>大写金额</label>
-                    <textarea rows="2" id="amt_zdx" readonly></textarea>
+                    <textarea rows="2" id="amt_zdx" readonly>零元整</textarea>
                 </div>
             </div>
-            <div class="mui-row " style="height:5vw;text-align:center;">
+            <div class="mui-row itemtitle2" style="height:5vw;text-align:center;">
                 <label>是否有其他费用</label>
             </div>
             <div class="mui-input-group" style="">
@@ -102,18 +102,21 @@
                 </div>
             </div>
             <div id="jkcard" style="display:none;">
+                <div class="mui-row itemtitle3" style="height:10vw;text-align:center;padding-top:3vw;">
+                    <label>借款申请</label>
+                </div>
                 <div class="mui-row cutOffLine" style="padding:3vw;">
                     <div class="mui-col-xs-4" style="display:flex;">
                         <label>借款金额</label>
-                        <input type="number" id="jkje" placeholder="请填写"/>
+                        <input type="number" id="jkje" placeholder="请填写" />
                     </div>
                     <div class="mui-col-xs-4" style="display:flex;">
                         <label>大写金额</label>
-                        <input type="text" id="jkjedx" readonly/>
+                        <input type="text" id="jkjedx" readonly />
                     </div>
                     <div class="mui-col-xs-4" style="display:flex;">
                         <label>借款单号</label>
-                        <input type="text" id="jkcode" readonly/>
+                        <input type="text" id="jkcode" readonly />
                     </div>
                 </div>
                 <div class="mui-row cutOffLine" style="padding:3vw;">
@@ -205,28 +208,35 @@
                         <textarea rows="2" id="hjdx" readonly></textarea>
                     </div>
                 </div>
-                <div id="mx">
-                    <div class="mui-input-row itemtitle">
-                        <label>明细列表项</label>
-                        <span class="mui-icon mui-icon-close mui-pull-right" style="margin-right:0.6rem;border-width:0.1rem;border-radius:1.2rem;margin-top:0.2rem;" id="deleteProduct" onclick="deleteItem(this)"></span>
-                    </div>
-                    <div class="mui-row cutOffLine" style="padding:3vw;">
-                        <div class="mui-col-xs-6" style="display:flex;">
-                            <label>费用项目<i style="color:red;">*</i></label>
-                            <textarea rows="2" id="fyxmmc" readonly placeholder="请选择"></textarea>
+               
+                <div id="mxlist">
+                    <div id="mx">
+                        <div class="mui-input-row itemtitle">
+                            <label>明细列表项</label>
+                            <span class="mui-icon mui-icon-close mui-pull-right" style="margin-right:0.6rem;border-width:0.1rem;border-radius:1.2rem;margin-top:0.2rem;" id="deleteProduct" onclick="deleteItem(this)"></span>
                         </div>
-                        <div class="mui-col-xs-6" style="display:flex;">
-                            <label>申请金额<i style="color:red;">*</i></label>
-                            <input type="number" id="sqje" placeholder="请填写"/>
-                        </div>                        
-                    </div> 
-                    <div class="mui-row cutOffLine" style="padding:3vw;">
-                        <div class="mui-col-xs-12" style="display:flex;">
-                            <label>备注说明</label>
-                            <textarea rows="2" id="beizhusm" placeholder="请填写"></textarea>
+                        <div class="mui-row cutOffLine" style="padding:3vw;">
+                            <div class="mui-col-xs-6" style="display:flex;">
+                                <label>费用项目<i style="color:red;">*</i></label>
+                                <textarea rows="2" id="fyxmmc" readonly placeholder="请选择"></textarea>
+                            </div>
+                            <div class="mui-col-xs-6" style="display:flex;">
+                                <label>申请金额<i style="color:red;">*</i></label>
+                                <input type="number" id="sqje" placeholder="请填写" />
+                            </div>
+                        </div>
+                        <div class="mui-row cutOffLine" style="padding:3vw;">
+                            <div class="mui-col-xs-12" style="display:flex;">
+                                <label>备注说明</label>
+                                <textarea rows="2" id="beizhusm" placeholder="请填写"></textarea>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <a class="mui-btn mui-btn-primary mui-btn-block mui-btn-outlined" id="tjmx" style="margin-top:0.5rem;display:none;">
+                    添加其他费用申请明细
+                    <span class="mui-icon mui-icon-plusempty"></span>
+                </a>
             </div>
         </form>
         <div class="mui-btn-row" id="SaveD">
